--- a/app/src/main/res/xml/todo_list_widget_info.xml
+++ b/app/src/main/res/xml/todo_list_widget_info.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Updating widget periodically to have up-to-date urgency colors and days-until-deadline. -->
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:configure="org.secuso.privacyfriendlytodolist.view.widget.TodoListWidgetConfigureActivity"
     android:initialKeyguardLayout="@layout/widget_list"
@@ -7,6 +8,7 @@
     android:minHeight="80dp"
     android:minResizeWidth="80dp"
     android:minResizeHeight="80dp"
+    android:updatePeriodMillis="14400000"
     android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen" />
